# crewai-projects

./: Dockerfile  Dockerfile.toolkit  SETUP_AND_RUN.md
ltc-nextjs-client/: package-lock.json  package.json
ltc-nextjs-client/src/app/: globals.css  layout.tsx  page.tsx
ltc-nextjs-client/src/components/: LTCChat.tsx
ltc-nextjs-client/src/styles/: App.module.css
ltc_client/: .gitignore  package.json
ltc_client/public/: index.html
ltc_client/src/: App.css  App.tsx
ltc_crew/: README.md  pyproject.toml
ltc_crew/src/ltc_crew/: api.py  crew.py  main.py
ltc_crew/src/ltc_crew/config/: agents.yaml  tasks.yaml
ltc_crew/src/ltc_crew/tools/: ltc_search_tool.py
my_first_crew/: pyproject.toml
my_first_crew/src/my_first_crew/: api.py  crew.py  main.py
my_first_crew/src/my_first_crew/config/: agents.yaml  tasks.yaml
